# demilich

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/demilich/: __main__.py  builder.py  cli.py  creature_gen.py  creature_gen2.py  data.py  output.py  reader.py  restrictions.py  skeldef.py  skeleton.py  skeleton_builder.py  slot_maker.py
src/demilich/bag/: example.py  play_booster_2024.py  slot_maker.py
src/demilich/builder/: __init__.py  creature_gen.py  example.py  restrictions.py
src/demilich/data/: demilich.schema.json  pb2024.toml
src/demilich/examples/: dev.py  play_booster_2024.py
