[tool.poetry]
name = "demilich"
version = "0.1.0"
description = "Demilich, the MTG skeleton wizard"
authors = ["Matt Cooper <vtbassmatt@gmail.com>"]
readme = "README.md"
packages = [{include = "demilich", from = "src"}]

[tool.poetry.scripts]
demilich = "demilich.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
