[project]
name = "demilich"
version = "1.2.1"
description = "Demilich, the MTG skeleton wizard"
authors = [{ name = "Matt Cooper", email = "vtbassmatt@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
keywords = [
    "game",
    "tcg",
    "mtg",
    "magic",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["typer>=0.15.1,<0.16"]

[project.urls]
Homepage = "https://github.com/vtbassmatt/demilich"
Repository = "https://github.com/vtbassmatt/demilich"
Documentation = "https://github.com/vtbassmatt/demilich"
"Bug Tracker" = "https://github.com/vtbassmatt/demilich/issues"

[project.scripts]
demilich = "demilich.cli:app"

[tool.hatch.build.targets.sdist]
include = ["src/demilich"]

[tool.hatch.build.targets.wheel]
include = ["src/demilich"]

[tool.hatch.build.targets.wheel.sources]
"src/demilich" = "demilich"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
